# skelshop

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  404.html  AUTHORS  Dockerfile  LICENSE  README.md  Singularity  Singularity.skeldump  Snakefile  drawsticks.py  dump.py  index.html  install.sh  install_all.sh  install_rest.sh  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  skeldump.py  tox.ini
.github/workflows/: docker.yml
benchmark/: index.html
cli/: index.html
contrib/fixups/: fixup_unordered_h5.py  fixup_unordered_h5.sh  h5_to_json.py  h5_to_json.sh
contrib/slurm/: README.md  bench.header.sh  bench.sh  conv_2017.sh  conv_ellen.sh  embedtrain.clusc.json  run_coord.sh  skels.tracked.clusc.json  track.clusc.json
development/: index.html
docker/: skelshop_entrypoint  skelshop_env
docs/: benchmark.md  cli.md  development.md  face-embedders.md  face-extractors.md  face-pipeline-configuration-guide.md  formats.md  identification.md  index.md  io.md  pipeline-internals.md  pipelines-overview.md  pose-estimators.md  pose-trackers.md  shot-segmentors.md  snakemake.md  tracking.md  usage-examples.md  user-guide-intro.md
docs/beginners/: index.md  poetry.md  setup_hpc.md  setup_local.md  singularity.md  snakemake.md
embedtrain/: Snakefile  ckpt_to_ts.py  embed_vis.py  export.py  pre_embed.py  prep_images.py  prep_vocab.py  sticks.py  train.py
embedtrain/embedtrain/: cmd_utils.py  datasets.py  dl_datasets.py  draw.py  embed_skels.py  flex_st_gcn.py  graph.py  litmod.py  merge.py  multilabel_softmax.py  prep.py  pt_datasets.py  pt_tb_monkey.py  utils.py
face-embedders/: index.html
face-extractors/: index.html
face-pipeline-configuration-guide/: index.html
formats/: index.html
hooks/: build
identification/: index.html
io/: index.html
pipeline-internals/: index.html
pipelines-overview/: index.html
pose-estimators/: index.html
pose-trackers/: index.html
ray/: index.html
search/: search_index.json
segs/: ssmat.py
shot-segmentors/: index.html
skeldump/: bbshotseg.py  bbtrack.py  csvshotseg.py  drawsticks.py  dump.py  io.py  openpose.py  pipebase.py  pipeline.py  player.py  pose.py  skelgraphs.py  sparsepose.py
skeldump/cmd/: conv.py  drawsticks.py  dump.py  filter.py  playsticks.py  skeldump.py  stats.py
skeldump/embed/: manual.py
skeldump/infmt/: ordered_tar.py  tar.py  zip.py
skeldump/skelgraphs/: base.py  openpose.py  reducer.py  utils.py
skeldump/track/: __init__.py  bbox.py  confs.py  manual_embed_match.py  models.py  pose.py  pose_match.py  posetrack_gcn_match.py  spatial.py  spec.py  track.py  utils.py
skeldump/track/metrics/: __init__.py  base.py  lighttrack_pose_match.py  manual_embed_match.py  posetrack_gcn_match.py  spatial.py
skeldump/utils/: bbox.py  geom.py  iter.py  threading.py
skelshop/: __main__.py  bbshotseg.py  bbtrack.py  config.py  corpus.py  csvshotseg.py  drawsticks.py  dump.py  face.py  io.py  lazyimp.py  openpose.py  pipebase.py  pipeline.py  player.py  pose.py  sparsepose.py
skelshop/cluster/: dbscan.py  faiss_utils.py  knn.py  param_search.py  score.py
skelshop/cmd/: aplot.py  bench.py  calibrate.py  conv.py  drawsticks.py  dump.py  dumpimgs.py  face.py  filter.py  filter_vrt.py  idsegs.py  playsticks.py  skelshop.py  stats.py
skelshop/cmd/face/: __init__.py  bestcands.py  embedall.py  embedselect.py  face.py  idsegs.py  savechips.py
skelshop/cmd/iden/: __init__.py  applymap.py  buildrefs.py  clus.py  embedrefs.py  idclus.py  iden.py  idrnnclus.py  idsegsfull.py  idsegsmed.py  idsegssparse.py  whoisthis.py  writeprotos.py
skelshop/embed/: manual.py
skelshop/face/: bestcands.py  cmd.py  consts.py  io.py  modes.py  pipe.py
skelshop/iden/: buildrefs.py  idsegs.py
skelshop/infmt/: ordered_tar.py  tar.py  utils.py  zip.py
skelshop/shotseg/: base.py  blackbox.py  ffprobe.py  io.py  psdcsv.py
skelshop/skelgraphs/: base.py  conv.py  openpose.py  openpose_base.py  openpose_legacy.py  openpose_multi.py  posetrack.py  utils.py
skelshop/test/: test_errorfree_run.py  testing_conf.py
skelshop/track/: __init__.py  confs.py  spec.py  track.py
skelshop/track/metrics/: lighttrack_pose_match.py  manual_embed_match.py  posetrack_gcn_match.py  spatial.py
skelshop/utils/: bbox.py  click.py  dlib.py  geom.py  h5py.py  numpy.py  ray.py  threading.py  timer.py  video.py  vidreadwrapper.py
snakemake/: index.html
tracking/: index.html
usage-examples/: index.html
user-guide-intro/: index.html
workflow/: Snakefile
workflow/rules/: calibrate.smk  faces.smk  faces2.smk  skels.smk
workflow/scripts/: ffprobe.py  scenedetect.py
