[tool.poetry]
name = "skelshop"
version = "0.1.0"
description = "Utilities for dealing with pose skeleton data, currently from OpenPose"
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
h5py = "^2.10.0"
imutils = "^0.5.3"
click = "^7.1.2"
opencv-python-headless = "^4.2.0"
torch = "^1.6.0"
more_itertools = "^8.3.0"
click_log = "^0.3.2"
ordered-set = "^4.0.1"
orjson = "^3.1.0"
numpy = "^1.19.0"

snakemake = { version = "^5.18.1", optional = true}
scenedetect = { version = "^0.5.2", optional = true}
pygame = { version = "^2.0.0", optional = true }
numba = { version = "^0.49.1", optional = true }
matplotlib = { version = "^3.2.1", optional = true }
scikit-learn = { version = "^0.23.1", optional = true }
scipy = { version = "^1.5.0", optional = true }
face_recognition = { version = "^1.3.0", optional = true }

[tool.poetry.extras]
pipeline = ["scenedetect", "snakemake"]
play = ["pygame"]
face = ["face_recognition"]
ssmat = ["numba", "matplotlib", "scikit-learn", "scipy"]

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = {extras = ["pyproject"], version = "^4.3.21"}
pre-commit = "^2.4.0"
mypy = "^0.782"
tox = "^3.15.2"
mkdocs = "^1.1.2"
mkdocstrings = "^0.13.6"
mkdocs-material = "^6.1.0"
mkdocs-click = { version = "^0.1.1" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
