[metadata]
description-file = README.md

[flake8]
ignore = E741, W503, E501, E203, E722
max-line-length = 88

[mypy]
warn_return_any = True
warn_unreachable = True
check_untyped_defs = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True

[mypy-ufunclab.*]
ignore_missing_imports = True

[mypy-h5py.*]
ignore_missing_imports = True

[mypy-cv2.*]
ignore_missing_imports = True

[mypy-pygame.*]
ignore_missing_imports = True

[mypy-opencv_wrapper.*]
ignore_missing_imports = True

[mypy-openpose.*]
ignore_missing_imports = True

[mypy-ordered_set.*]
ignore_missing_imports = True

[mypy-lighttrack.*]
ignore_missing_imports = True

[mypy-imutils.*]
ignore_missing_imports = True

[mypy-click_log.*]
ignore_missing_imports = True

[isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = click,click_log,cv2,h5py,imagesize,imutils,lighttrack,matplotlib,more_itertools,numba,numpy,opencv_wrapper,ordered_set,orjson,pygame,scipy,sklearn,torch,ufunclab,wcmatch
